fix photo not fitting on frontpage

--- a/resources/scss/custom.scss
+++ b/resources/scss/custom.scss
@@ -75,6 +75,7 @@ header {
 
 header img {
   border-radius: 15px 255px 15px 225px/225px 15px 225px 15px;
+  height: 20vw !important;
 }
 
 .lined.thick, .lined.thick {
